--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,8 +1,24 @@
 /* index.html*/
+html {
+    background: repeating-linear-gradient(to right,
+            #697184,
+            #697184, 50px,
+            white 50px,
+            white 70px);
+
+}
+
+@media screen and (max-width: 800px) {
+    .res-nav {
+        bottom: 0px;
+        top: -25px;
+    }
+}
+
 
 body {
 
-    background-color: #D8CFD0;
+
 
     font-family: sans-serif;
     font-size: 16px;
@@ -10,28 +26,66 @@ body {
 
 }
 
+
+
 h1 {
-    font-family: cursive;
+    font-family: fantasy;
     font-size: 70px;
+    color: black;
+
 }
 
-/* fix xxxxx xxxx . */
-
-
-.wrapper {
-
-    margin: 0 auto;
-    background: repeating-linear-gradient(to right,
-            #D8CFD0,
-            #D8CFD0 20px,
-            #413F3D 20Px,
-            #413F3D 40px);
+h2 {
+    font-family: cursive;
+    font-size: 26px;
+    color: black;
+    padding-bottom: 40px;
 }
 
-header {
-    background-color: #413f4d;
-    height: 280px;
-    padding-bottom: 50px;
+h3 {
+    font-family: serif;
+    text-align: center;
+    font-size: 14px;
+
+    padding-bottom: 10px;
+
+}
+
+p {
+    font-family: sans-serif;
+    text-align: center;
+    font-size: 18px;
+    padding-bottom: 20px;
+
+    font-size: 1.1em;
+}
+
+
+img {
+    width: 500px;
+    border-bottom: 10px solid black;
+    border-left: 10px solid black;
+    border-top: 7px solid white;
+    border-right: 7px solid white;
+
+}
+
+
+
+
+
+
+
+header h1 {
+    background-color: black;
+    opacity: .9;
+
+    filter: alpha(opacity=50);
+
+
+
+
+
 
 
 }
@@ -44,32 +98,50 @@ h1 {
     padding-bottom: 10px;
     text-align: center;
     color: white;
-    font: 400 130px/0.8 'Great Vibes', Helvetica, sans-serif;
+    font: 400 130px/0.8 'Great Vibes',
+        Helvetica,
+        sans-serif;
     color: #fff;
     text-shadow: 4px 4px 3px rgba(0, 0, 0, 0.1);
-    padding-bottom: 95px;
-    border-bottom: 7px solid black;
+    padding-bottom: 40px;
+    border-bottom: 10px solid white;
+
+
 
 
 }
 
 nav {
-    background-color: #413f4d;
+
+    background-color: black;
+
+    opacity: .8;
+
+    filter: alpha(opacity=50);
+
     background-size: cover;
     font-size: 1.1em;
     font-weight: lighter;
     text-align: center;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+
 
 
 }
 
 
 
-nav li {
+nav ul li {
 
     display: inline;
+    text-transform: uppercase;
+    margin-right: 10px;
+    letter-spacing: 1px;
+
+
+
+
 
 
 }
@@ -77,7 +149,8 @@ nav li {
 
 
 nav a {
-    display: inline-block;
+
+
     padding: .5em;
     color: white;
     text-decoration: none;
@@ -93,137 +166,111 @@ nav a {
 }
 
 nav a:hover {
-    background-color: rgba(255, 255, 255, .3);
+    background-color: rgba(255, 255, 255, .5);
 
 }
 
 
-.a-w {
-    align-items: center;
+.main-content {
     text-align: center;
-    padding-top: 50px;
-    padding-bottom: 50px;
-
-
-}
-
-.pic-p-a {
-    align-items: center;
-    text-align: center;
-    padding-top: 1px;
-    padding-bottom: 50px;
-
-}
-
-.b-w {
-
-    align-items: center;
-    text-align: center;
-    padding-top: 50px;
-    padding-bottom: 60px;
-
-}
-
-.pic-p-b {
-
-
-    align-items: center;
-    text-align: center;
-    padding-top: 20px;
-    padding-bottom: 100px;
-
-    background-color: #413F3D;
-
+    margin-top: 75px;
     color: white;
-    margin-top: -65px;
+
+
+
 }
 
-.pic-p-b a {
-
+.main-content a {
+    text-align: center;
     color: white;
+
 }
 
-.c-w {
 
 
-    text-align: center;
-}
 
-.pic-p-c {
-    align-items: center;
-    text-align: center;
-    padding-top: 20px;
-    padding-bottom: 100px;
+.image-one-text {
 
+    background-color: #413f4d;
+    opacity: .9;
 
-    background-color: #D8CFD0;
+    filter: alpha(opacity=50);
+    padding-top: 22px;
+    padding-bottom: 22px;
+    border-top: 7px solid black;
+    border-bottom: 7px solid black;
+    margin-bottom: 3px;
 
-
+    margin-bottom: 100px;
     margin-top: -3px;
+}
+
+.image-two-text {
+    background-color: #413f4d;
+    opacity: .9;
+
+
+    padding-top: 22px;
+    padding-bottom: 22px;
+    color: white;
+    border-top: 7px solid black;
+    border-bottom: 7px solid black;
+    margin-bottom: 100px;
+    margin-top: -3px;
+
+}
+
+.image-thr-text {
+    background-color: #413f4d;
+    opacity: .9;
+
+    padding-top: 20px;
+    padding-bottom: 20px;
+    color: white;
+    border-top: 7px solid black;
+    border-bottom: 7px solid black;
+    margin-bottom: 3px;
+    margin-bottom: 100px;
+    margin-top: -3px;
+
+}
+
+.image-thr-text a {
+    color: white;
+}
+
+.intro {
+    margin-top: 400px;
+    background-color: #413f4d;
+    opacity: .9;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    border-top: 7px solid black;
+    border-bottom: 7px solid black;
     margin-bottom: 400px;
 
 
 }
 
-.pic-p-c a {
-
-    color: black;
-
-}
+footer img {
 
 
+    width: 100px;
+    border: none;
 
-
-.intro {
-    text-align: center;
-    font-size: 26px;
-    padding-bottom: 50px;
-    padding-top: 50px;
-    font-family: cursive;
-    background-color: #413F3D;
-    color: white;
-}
-
-
-.text-intro {
-
-    background-color: #D8CFD0;
-    padding-bottom: 50px;
-    padding-top: 50px;
-    border: 5px solid white;
-
-    align-content: center;
-    text-align: center;
-
-
-
-
-}
-
-.text-intro a {
-
-    color: black;
-
-}
-
-main {
-    background-color: #D8CFDO;
 
 }
 
 footer {
-    border: 7px solid white;
-    text-align: left;
-    padding-top: 20px;
-
     background-color: #697184;
+    opacity: .9;
+    margin-top: 100px;
 
-}
-
-.footer-logo {}
-
-.made-at {
-    text-align: center;
+    padding-top: 20px;
     padding-bottom: 20px;
-    font-size: 12px;
+    border-top: 7px solid black;
+    border-bottom: 7px solid black;
+
+
+
 }
