--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -35,13 +35,7 @@ body {
 
 }
 
-h1 {
-    font-family: fantasy;
-    font-size: 70px;
-    color: white;
 
-
-}
 
 h2 {
     font-family: cursive;
@@ -97,50 +91,32 @@ header h1 {
 
     filter: alpha(opacity=50);
 
+    padding-top: 100px;
 
 
 
-
-
-
-
-}
-
-
-h1 {
-
-
-    padding-top: 40px;
-    padding-bottom: 10px;
-    text-align: center;
     color: white;
 
-    text-shadow: 4px 4px 3px rgba(0, 0, 0, 0.1);
-    padding-bottom: 40px;
-    border-bottom: 5px solid white;
-
-
+    font-family: 'Dancing Script', Georgia, Times, serif;
+    font-size: 70px;
+    line-height: 60px;
+    text-align: center;
+    padding-bottom: 50px;
+    border-bottom: 10px solid white;
 
 
 
 }
 
+
+
 nav {
+    text-align: center;
 
     background-color: black;
-
-    opacity: .8;
-
-    filter: alpha(opacity=50);
-
-    background-size: cover;
-    font-size: 1.1em;
-    font-weight: lighter;
-    text-align: center;
-    padding-top: 50px;
     padding-bottom: 50px;
-
-
+    padding-top: 50px;
+    opacity: .7;
 
 }
 
@@ -150,11 +126,6 @@ nav {
 nav ul li {
 
     display: inline;
-    text-transform: uppercase;
-    margin-right: 10px;
-    letter-spacing: 1px;
-
-
 
 
 
@@ -163,7 +134,12 @@ nav ul li {
 
 
 
+
+
 nav a {
+
+
+
 
 
     padding: .5em;
@@ -172,8 +148,12 @@ nav a {
     border: 5px solid white;
     border-bottom: 7px solid black;
     border-left: 7px solid black;
+    background-color: black;
+    opacity: .8;
+}
 
-
+nav a:hover {
+    background-color: rgba(255, 255, 255, .5);
 
 
 }
@@ -186,10 +166,7 @@ nav a {
     color: white;
 
 
-}
 
-nav a:hover {
-    background-color: rgba(255, 255, 255, .5);
 
 }
 
@@ -197,10 +174,16 @@ nav a:hover {
 
 
 .main-content a {
+
     text-align: center;
     color: white;
 
+
+
+
 }
+
+
 
 
 
@@ -221,38 +204,12 @@ nav a:hover {
     margin-top: -3px;
 }
 
-
-.image-two-text {
-    background-color: black;
-    opacity: .7;
-    padding-top: 22px;
-    padding-bottom: 22px;
-    color: white;
-    border-top: 7px solid black;
-    border-bottom: 7px solid black;
-    margin-bottom: 100px;
-    margin-top: -3px;
-
-}
-
-.image-thr-text {
-    background-color: black;
-    opacity: .7;
-
-    padding-top: 20px;
-    padding-bottom: 20px;
-    color: white;
-    border-top: 7px solid black;
-    border-bottom: 7px solid black;
-    margin-bottom: 3px;
-    margin-bottom: 100px;
-    margin-top: -3px;
-
-}
-
-.image-thr-text a {
+a {
     color: white;
 }
+
+
+
 
 .intro {
     margin-top: 400px;
@@ -266,6 +223,8 @@ nav a:hover {
 
 
 }
+
+
 
 footer img {
 
