--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -248,3 +248,15 @@ footer {
 
 
 }
+
+.imageWrapper {
+    max-width: 500px;
+    width: 100%;
+    margin: auto;
+}
+
+.imageWrapper img {
+    width: 94%;
+    height: auto;
+    display: block;
+}
