--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,42 +1,32 @@
-/* index.html*/
+/* html styles */
 html {
     background: repeating-linear-gradient(to right,
             #697184,
             #697184, 50px,
             white 50px,
             white 70px);
-
 }
 
-
+/* body styles */
 body {
-
-
-
+    width: 100%;
     font-family: sans-serif;
     font-size: 16px;
     align-content: center;
-
+    box-sizing: border-box;
 }
 
-
+/* wrapper class styles */
 .wrapper {
-    background-color: black;
-    opacity: .7;
+    background-color: rgba(0, 0, 0, 0.7);
     color: white;
     text-align: center;
-    margin-right: 200px;
-    margin-left: 200px;
-    margin-top: 200px;
-    padding-right: 50px;
-    padding-left: 50px;
-    padding-bottom: 50px;
-    padding-top: 50px;
-
+    margin-top: 100px;
+    width: 96%;
+    padding: 50px 2%;
 }
 
-
-
+/* heading 2 styles */
 h2 {
     font-family: cursive;
     font-size: 26px;
@@ -46,102 +36,66 @@ h2 {
     margin-bottom: 30px;
 }
 
+/* heading 3 styles */
 h3 {
     font-family: serif;
     text-align: center;
     font-size: 14px;
-
     padding-bottom: 10px;
     color: white;
 }
 
+/* p(paragraph) styles */
 p {
-
     font-family: sans-serif;
     text-align: center;
     font-size: 18px;
     padding-bottom: 20px;
-
     font-size: 1.1em;
     padding-bottom: 50px;
-
-
-
+    line-height: 1.3em;
 }
 
-
+/* image styles */
 img {
     width: 500px;
     border-bottom: 10px solid black;
     border-left: 10px solid black;
-    border-top: 7px solid white;
-    border-right: 7px solid black;
-
+    border-top: 10px solid white;
+    border-right: 10px solid black;
 }
 
-
-
-
-
-
-
+/* styles for heading 1 tag under the header section */
 header h1 {
     background-color: black;
     opacity: .9;
-
     filter: alpha(opacity=50);
-
     padding-top: 100px;
-
-
-
     color: white;
-
     font-family: 'Dancing Script', Georgia, Times, serif;
     font-size: 70px;
     line-height: 60px;
     text-align: center;
     padding-bottom: 50px;
     border-bottom: 10px solid white;
-
-
-
 }
 
-
-
+/* navigation styles */
 nav {
     text-align: center;
-
     background-color: black;
     padding-bottom: 50px;
     padding-top: 50px;
     opacity: .7;
-
 }
 
-
-
-
+/* navigation li(list items) styles */
 nav ul li {
-
     display: inline;
-
-
-
-
 }
 
-
-
-
-
+/* <a> anchor tag styles under the navigation section */
 nav a {
-
-
-
-
-
     padding: .5em;
     color: white;
     text-decoration: none;
@@ -152,111 +106,102 @@ nav a {
     opacity: .8;
 }
 
+/* hover style for anchor tag under navigation section */
 nav a:hover {
     background-color: rgba(255, 255, 255, .5);
-
-
 }
 
-
-
+/* main content class styles */
 .main-content {
     text-align: center;
     margin-top: 75px;
     color: white;
-
-
-
-
 }
 
-
-
-
+/* main-content anchor tag styles */
 .main-content a {
-
     text-align: center;
     color: white;
-
-
-
-
 }
 
-
-
-
-
-
+/* image-one-text class styles */
 .image-one-text {
-
     background-color: black;
     opacity: .7;
-
     filter: alpha(opacity=50);
-    padding-top: 22px;
-    padding-bottom: 22px;
+    padding: 22px 5px;
     border-top: 7px solid black;
     border-bottom: 7px solid black;
     margin-bottom: 3px;
-
     margin-bottom: 100px;
     margin-top: -3px;
 }
 
+/* universal anchor tag styles */
 a {
     color: white;
 }
 
-
-
-
+/* intro class styles */
 .intro {
     margin-top: 400px;
     background-color: black;
     opacity: .7;
-    padding-top: 50px;
-    padding-bottom: 50px;
+    padding: 50px 5px;
     border-top: 7px solid black;
     border-bottom: 7px solid black;
     margin-bottom: 400px;
-
-
 }
 
-
-
+/* footer image tag styles */
 footer img {
-
-
     width: 100px;
     border: none;
-
-
 }
 
+/* footer styles */
 footer {
     background-color: black;
     opacity: .9;
     margin-top: 100px;
-
     padding-top: 20px;
     padding-bottom: 20px;
     border-top: 7px solid black;
     border-bottom: 7px solid black;
-
-
-
 }
 
+/* .imageWrapper class styles */
 .imageWrapper {
     max-width: 500px;
     width: 100%;
-    margin: auto;
+    margin: 0 auto;
 }
 
+/* .imageWrapper image tag styles */
 .imageWrapper img {
     width: 94%;
     height: auto;
     display: block;
+    margin: 0 auto;
+}
+
+/* media breakpoint for screens under width of 400pixels for responsive styles */
+@media only screen and (max-width: 400px){
+    nav a{
+        padding: .4em;
+    }
+}
+
+/* media breakpoint for screens under width of 365pixels for responsive styles */
+@media only screen and (max-width: 365px){
+    nav a{
+        padding: .3em;
+    }
+}
+
+/* media breakpoint for screens under width of 350pixels for responsive styles */
+@media only screen and (max-width: 350px){
+    nav a{
+        padding: .1em;
+    }
 }
